--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,35 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Hello, World!</title>
-	</head>
-	<body>
-		<h1 id="heading">Hello, World!</h1>
-		<p>This page comes from a static asset stored at `public/index.html` as configured in `wrangler.jsonc`.</p>
-	</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>WIP</title>
+        <style>
+            @font-face {
+                font-family: "JetBrains Mono Local";
+                src: url("/assets/JetBrainsMono-VariableFont_wght.ttf")
+                    format("truetype");
+                font-weight: 100 900;
+                font-style: normal;
+                font-display: swap;
+            }
+            body {
+                font-family: "JetBrains Mono Local", ui-monospace,
+                    SFMono-Regular, Menlo, Monaco, "Roboto Mono", "Courier New",
+                    monospace;
+                margin: 2rem;
+                line-height: 1.4;
+                color: rgb(144, 91, 210);
+                text-align: center;
+            }
+            #heading {
+                font-size: 2.4rem;
+                margin-bottom: 0.5rem;
+            }
+        </style>
+    </head>
+    <body>
+        <h1 id="heading">WIP!</h1>
+        <p>This domain has plans, but they are not yet realised.</p>
+    </body>
 </html>
