--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
                     monospace;
                 margin: 2rem;
                 line-height: 1.4;
+                background-color: #121212;
                 color: rgb(144, 91, 210);
                 text-align: center;
             }
